--- a/index.css
+++ b/index.css
@@ -260,9 +260,13 @@
 }
 .ulcontainer ul li{
     list-style: none;
-    width: 216px;
-    text-align: center;
+    width: 210px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 35px;
+    background-color: #807f96;
+    margin: 3px;
 }
 .ulcontainer ul :nth-child(1){
     font-weight: bold;
