--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -40,6 +44,7 @@
     width: 21px;
     background-color: rgb(35, 35, 67);
     border-radius: 50%;
+    transition: all ease 0.2s;
     
 }
 
